--- a/Blog/src/pages/blog.astro
+++ b/Blog/src/pages/blog.astro
@@ -1,7 +1,3 @@
----
-
----
-
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -14,6 +10,7 @@
 		<a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/blog/">blog</a>
-		<h1>om min blog </h1>
+		<h1>My Astro Learning Blog</h1>
+  <p>This is where I will post about my journey learning Astro.</p>
 	</body>
 </html>
